--- a/pom.xml
+++ b/pom.xml
@@ -161,7 +161,21 @@
       </plugins>
     </pluginManagement>
   </build>
-
+<scm>
+         <url>https://github.com/JoseAlexandreGiry/maven-project</url>
+         <connection>scm:git:git://github.com/JoseAlexandreGiry/maven-project.git</connection>
+            <developerConnection>scm:git:git@github.com://github.com/JoseAlexandreGiry/maven-project.git</developerConnection>
+         </scm>
+         
+       <developers>
+		<developer>
+			<email>josealexandre.giry@gmail.com</email>
+			<name>Jose</name>
+			<url>https://github.com/JoseAlexandreGiry</url>
+			<id>JoseAlexandreGiry</id>
+		</developer>
+	</developers>
+       
   <dependencyManagement>
     <dependencies>
       <dependency>
