--- a/pom.xml
+++ b/pom.xml
@@ -208,11 +208,11 @@
   </dependencyManagement>
 
   <scm>
-    <connection>scm:git:git@github.com:jleetutorial/maven-project.git</connection>
-	  
-    <developerConnection>scm:git:git@github.com:jleetutorial/maven-project.git</developerConnection>
+    <connection>scm:git:https://github.com/JoseAlexandreGiry/maven-project.git</connection>
+	
+    <developerConnection>scm:git: https://github.com/JoseAlexandreGiry/maven-project.git</developerConnection>
     <tag>HEAD</tag>
-    <url>http://github.com/jleetutorial/maven-project</url>
+    <url> https://github.com/JoseAlexandreGiry/maven-project</url>
   </scm>
 
   <prerequisites>
